src/test/ui/feature-gates/feature-gate-sanitizer-runtime.stderr
error[E0658]: the `#[sanitizer_runtime]` attribute is used to identify crates that contain the runtime of a sanitizer and will never be stable
  --> $DIR/feature-gate-sanitizer-runtime.rs:1:1
   |
LL | #![sanitizer_runtime]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(sanitizer_runtime)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
